# oxitron

./: .gitignore
candado/: Cargo.toml
candado/src/: integridad.rs  lib.rs  rsa.rs  xcha.rs
flutex/: Cargo.toml
flutex/src/: analizador.rs  lego.rs  lib.rs  lista.rs  texto.rs
oxicore/: Cargo.toml
oxicore/src/: erromacro.rs  lib.rs  resolutor.rs  token.rs  zstd.rs
protoRPC/: Cargo.toml
tonico/: Cargo.toml  build.rs
tonico/src/: lib.rs
tonico/src/cuenta/: inicio.proto  inicio.rs  mod.rs  registro.proto  registro.rs
tonico/src/flutex/: flutex.proto  flutex.rs  mod.rs
