[package]

name = "candado"

version = "0.1.0"

edition = "2021"

[dependencies]

oxicore = { path = "../oxicore" }

chrono = "^0.4.38"

rand = "^0.8.5"

faster-hex = "^0.9.0"

sha2 = "^0.10.8"

hmac = "^0.12.1"

rsa = "^0.9.6"

chacha20poly1305 = "^0.10.1"

[profile.dev]

opt-level = 0

debug = false
